# coldstars

./: .hgignore  CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  CMakeLists.txt.user.55f10f4  Makefile  Makefile~  _Makefile  _b.sh  b_all.sh  b_ceti.sh  b_jeti.sh  b_meti.sh  b_qeti.sh  b_sfgui.sh  b_sfml.sh  bug_free_make.sh  config.info  fastbuild.sh  fullbuild.sh  game_debug.sh  include.h  include.hpp  include.h~  install.txt  main  main.cpp  main_debug.sh  pureTest.cpp  read.me  read.me~  readme.txt  refactor.txt  run  run-debug.sh  run_debug.sh  save.info  sfml.1568899.patch  telegrams
dependencies/glew/: CMakeLists.txt
src/: Base.cpp  Base.hpp  CMakeLists.txt  main.cpp
src/ai/: BaseTask.cpp  BaseTask.hpp  MacroTask.cpp  MacroTask.hpp  MacroTaskHolder.hpp  MacroTaskManager.cpp  MacroTaskManager.hpp  MicroTask.cpp  MicroTask.hpp  MicroTaskHolder.cpp  MicroTaskManager.cpp  MicroTaskManager.hpp  ScenarioCollector.cpp  ScenarioCollector.hpp  StateMachine.cpp  StateMachine.hpp  Task.cpp  Task.hpp
src/builder/: AngarBuilder.cpp  AngarBuilder.hpp  AsteroidBuilder.cpp  AsteroidBuilder.hpp  BakEquipmentBuilder.cpp  BaseVehicleBuilder.cpp  BaseVehicleBuilder.hpp  BlackHoleBuilder.cpp  BlackHoleBuilder.hpp  ContainerBuilder.cpp  ContainerBuilder.hpp  GalaxyBuilder.cpp  GalaxyBuilder.hpp  God.cpp  God.hpp  GovermentBuilder.cpp  GovermentBuilder.hpp  ItemSlotBuilder.cpp  ItemSlotBuilder.hpp  KosmoportBuilder.cpp  KosmoportBuilder.hpp  NatureLandBuilder.cpp  NatureLandBuilder.hpp  NpcBuilder.cpp  NpcBuilder.hpp  PlanetBuilder.cpp  PlanetBuilder.hpp  PlayerBuilder.cpp  PlayerBuilder.hpp  RocketBuilder.cpp  RocketBuilder.hpp  RocketBulletBuilder.cpp  RocketBulletBuilder.hpp  SatelliteBuilder.cpp  SatelliteBuilder.hpp  ShipBuilder.cpp  ShipBuilder.hpp  ShopBuilder.cpp  ShopBuilder.hpp  SpaceStationBuilder.cpp  (+13 more)
src/ceti/: Box2D.cpp  Box2D.hpp  CMakeLists.txt  Collector.hpp  Collision.cpp  Collision.hpp  DescriptorBase.cpp  DescriptorBase.hpp  Logger.cpp  Logger.hpp  Orientation.cpp  Orientation.hpp  StringUtils.hpp  myStr.cpp  myStr.hpp  points.cpp  points.hpp  rect.cpp  rect.hpp
src/common/: Base.cpp  Base.hpp  BaseDrawable.cpp  Box2D.cpp  Box2D.hpp  BulletData.hpp  Collision.cpp  Collision.hpp  Date.cpp  Date.hpp  EntityManager.cpp  EntityManager.hpp  GameDate.cpp  GameDate.hpp  IdGenerator.hpp  Logger.cpp  Logger.hpp  Message.cpp  Message.hpp  MessageManager.cpp  MessageManager.hpp  Orientation.cpp  Orientation.hpp  SaveLoadManager.cpp  SaveLoadManager.hpp  TurnTimer.cpp  TurnTimer.hpp  alias.hpp  common.cpp  common.hpp  constants.cpp  constants.hpp  gameStruct.cpp  gameStruct.hpp  gameTimer.cpp  gameTimer.hpp  global.cpp  global.h  global.hpp  global0.hpp  (+17 more)
src/config/: SaveManager.cpp  SaveManager.hpp  config.cpp  config.hpp
src/docking/: Angar.cpp  Angar.hpp  BaseLand.cpp  BaseLand.hpp  Goverment.cpp  Goverment.hpp  Kosmoport.cpp  Kosmoport.hpp  NatureLand.cpp  NatureLand.hpp  Platform.cpp  Platform.hpp  Room.cpp  Room.hpp  Shop.cpp  Shop.hpp  Store.cpp  Store.hpp  VehicleSlot.cpp  VehicleSlot.hpp  angar.cpp  angar.hpp  dockingStation.cpp  dockingStation.hpp  goverment.cpp  goverment.hpp  kosmoport.cpp  kosmoport.hpp  land.cpp  land.hpp  landBase.cpp  landBase.hpp  platform.cpp  platform.hpp  shop.cpp  shop.hpp  store.cpp  store.hpp
src/effects/: BaseBackGroundEffect.cpp  BaseBackGroundEffect.hpp  DistantNebulaEffect.cpp  DistantNebulaEffect.hpp  DistantStarEffect.cpp  DistantStarEffect.hpp  Shield.cpp  Shield.hpp  ShockWaveEffect.cpp  ShockWaveEffect.hpp  background.cpp  background.h  distantNebulaBg.cpp  distantNebulaBg.h  distantNebulaBg.hpp  distantStarBg.cpp  distantStarBg.h  distantStarBg.hpp  effects.cpp  effects.h  explosion.cpp  explosion.h  lazerTrace.cpp  lazerTrace.h  lazerTrace.hpp  rocketBullet.cpp  rocketBullet.h  shield.cpp  shield.h  shield.hpp  shockWave.cpp  shockWave.hpp  turrel.cpp  turrel.h
src/equipment/: bakEquipment.cpp  bakEquipment.h  bakEquipment.hpp  commonforequipment.cpp  commonforequipment.h  commonforequipment.hpp  driveEquipment.cpp  driveEquipment.h  driveEquipment.hpp  droidEquipment.cpp  droidEquipment.h  droidEquipment.hpp  energizerEquipment.cpp  energizerEquipment.h  energizerEquipment.hpp  freezerEquipment.cpp  freezerEquipment.h  freezerEquipment.hpp  grappleEquipment.cpp  grappleEquipment.h  grappleEquipment.hpp  lazerEquipment.cpp  lazerEquipment.h  lazerEquipment.hpp  protectorEquipment.cpp  protectorEquipment.h  protectorEquipment.hpp  radarEquipment.cpp  radarEquipment.h  radarEquipment.hpp  rocketEquipment.cpp  rocketEquipment.h  rocketEquipment.hpp  scanerEquipment.cpp  scanerEquipment.h  scanerEquipment.hpp
src/game/: CMakeLists.txt  CMakeLists.txt~  main.cpp
src/garbage/: EntityGarbage.cpp  EntityGarbage.hpp  GarbageEntities.cpp  GarbageEntities.hpp
src/gui/: BaseButton.cpp  BaseButton.hpp  BaseGui.cpp  BaseGui.hpp  BaseGuiElement.cpp  BaseGuiElement.hpp  Button.cpp  Button.hpp  ButtonSingle.cpp  ButtonSingle.hpp  ButtonTrigger.cpp  ButtonTrigger.hpp  Cursor.cpp  Cursor.hpp  GuiAngar.cpp  GuiAngar.hpp  GuiGalaxyMap.cpp  GuiGalaxyMap.hpp  GuiKosmoport.cpp  GuiKosmoport.hpp  GuiManager.cpp  GuiManager.hpp  GuiMap.cpp  GuiMap.hpp  GuiNatureLand.cpp  GuiNatureLand.hpp  GuiPair.hpp  GuiRadar.cpp  GuiRadar.hpp  GuiShop.cpp  GuiShop.hpp  GuiSkill.cpp  GuiSkill.hpp  GuiSkills.cpp  GuiSpace.cpp  GuiSpace.hpp  GuiStore.cpp  GuiStore.hpp  GuiVehicle.cpp  GuiVehicle.hpp  (+50 more)
src/items/: BaseItem.cpp  BaseItem.hpp  bakItem.cpp  bakItem.h  baseItem.cpp  baseItem.hpp  commonforitems.cpp  commonforitems.h  driveItem.cpp  driveItem.h  droidItem.cpp  droidItem.h  energizerItem.cpp  energizerItem.h  freezerItem.cpp  freezerItem.h  grappleItem.cpp  grappleItem.h  itemBase.cpp  itemBase.hpp  lazerItem.cpp  lazerItem.h  protectorItem.cpp  protectorItem.h  radarItem.cpp  radarItem.h  rocketItem.cpp  rocketItem.h  scanerItem.cpp  scanerItem.h
src/jeti/: AnimationEffect2D.cpp  AnimationEffect2D.hpp  BaseDrawable.cpp  BaseDrawable.hpp  CMakeLists.txt  Camera.hpp  (+31 more)
src/jeti-build/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake  jeti.cbp
(+3534 files in other folders)
