cmake_minimum_required (VERSION 2.8)

file(GLOB_RECURSE COLDSTARS_SOURCE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE COLDSTARS_HEADER RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)

add_executable (${PROJECT} ${COLDSTARS_SOURCE} ${COLDSTARS_HEADER})
target_link_libraries(${PROJECT} ${SFML_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES COMPILE_FLAGS "-Wall -Wno-switch -std=c++0x")
   
# deploy
ADD_CUSTOM_COMMAND(
    TARGET ${PROJECT}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT} ${DEPLOY_DIR}
)

ADD_CUSTOM_COMMAND(
    TARGET ${PROJECT}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E create_symlink ${SOURCE_ROOT}/data ${DEPLOY_DIR}/data
)

