PROJECT(glew)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(OpenGL REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(GLEW_INCLUDE_DIR "include")
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})

SET(GLEW_EXT_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/GL/glew.h
                     ${CMAKE_CURRENT_SOURCE_DIR}/include/GL/glxew.h
                     ${CMAKE_CURRENT_SOURCE_DIR}/include/GL/wglew.h)

SUBDIRS(src)
