SET(GLEW_SRC glew)

IF(WIN32)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
    ADD_DEFINITIONS(-D__MINGW32__)
    LIST(APPEND GLEW_SRC glew.rc)
ENDIF(WIN32)

IF(${GLEW_STATIC})
	ADD_LIBRARY(glew STATIC ${GLEW_SRC} ${GLEW_EXT_HEADERS})
	ADD_DEFINITIONS(-DGLEW_STATIC)
	SET_TARGET_PROPERTIES(glew PROPERTIES OUTPUT_NAME "glew_static")
ELSE()
	ADD_LIBRARY(glew SHARED ${GLEW_SRC} ${GLEW_EXT_HEADERS})
	ADD_DEFINITIONS(-DGLEW_BUILD)
	TARGET_LINK_LIBRARIES(glew ${OPENGL_LIBRARIES})
ENDIF()
