cmake_minimum_required (VERSION 2.8)

file(GLOB_RECURSE ${PROJECT_SERVER}_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE ${PROJECT_SERVER}_HDR RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

if (NOT COMPILE_FLAGS)
    set(COMPILE_FLAGS "-Wall -Wno-switch -std=c++11 -std=gnu++11")
endif ()

add_executable (${PROJECT_SERVER} ${${PROJECT_SERVER}_SRC} ${${PROJECT_SERVER}_HDR})
target_link_libraries(${PROJECT_SERVER}
    ${PROJECT_CORE}
)
set_target_properties(${PROJECT_SERVER} PROPERTIES COMPILE_FLAGS ${COMPILE_FLAGS})

# deploy
install(TARGETS ${PROJECT_SERVER} DESTINATION ${DEPLOY_DIR})
